# app/static/swagger.json
@@ -60,10 +60,31 @@
               "content": {
                 "application/json": {
                   "schema": {
-                      "$ref": "#/components/schemas/freekanceRespose"
+                      "$ref": "#/components/schemas/freelanceRespose"
                     }
                   }
                 }
+            },
+            "210": {                
+              "description": "invalid ACCESS_TOKEN",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "keyword": {
+                        "type": "string"
+                      },
+                      "ACCESS_TOKEN": {
+                        "type": "string"
+                      },
+                      "status": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
             },
             "400": {
               "description": "Failed. Misunderstood Request."
@@ -87,7 +108,7 @@
               "content": {
                 "application/json": {
                   "schema": {
-                    "$ref": "#/components/schemas/freekanceRequest"
+                    "$ref": "#/components/schemas/freelanceRequest"
                   }
                 }
               }
@@ -101,11 +122,32 @@
                 "content": {
                   "application/json": {
                     "schema": {
-                        "$ref": "#/components/schemas/freekanceRespose"
+                        "$ref": "#/components/schemas/freelanceRespose"
                       }
                     }
                   }
               },
+              "210": {                
+              "description": "invalid ACCESS_TOKEN",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "keyword": {
+                        "type": "string"
+                      },
+                      "ACCESS_TOKEN": {
+                        "type": "string"
+                      },
+                      "status": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            },
               "400": {
                 "description": "Failed. Bad post data."
               },
@@ -140,6 +182,27 @@
               "application/json": {
                 "schema": {
                     "$ref": "#/components/schemas/haysRespose"
+                  }
+                }
+              }
+            },
+            "210": {                
+              "description": "invalid ACCESS_TOKEN",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "keyword": {
+                        "type": "string"
+                      },
+                      "ACCESS_TOKEN": {
+                        "type": "string"
+                      },
+                      "status": {
+                        "type": "string"
+                      }
+                    }
                   }
                 }
               }
@@ -182,6 +245,27 @@
                   }
                 }
             },
+            "210": {                
+              "description": "invalid ACCESS_TOKEN",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "keyword": {
+                        "type": "string"
+                      },
+                      "ACCESS_TOKEN": {
+                        "type": "string"
+                      },
+                      "status": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            },
             "400": {
               "description": "Failed. Misunderstood Request."
             },
@@ -220,6 +304,27 @@
                     }
                   }
               },
+              "210": {                
+              "description": "invalid ACCESS_TOKEN",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "keyword": {
+                        "type": "string"
+                      },
+                      "ACCESS_TOKEN": {
+                        "type": "string"
+                      },
+                      "status": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            },
               "400": {
                 "description": "Failed. Misunderstood Request."
               },
@@ -265,6 +370,27 @@
                       }
                     }
                 },
+                "210": {                
+              "description": "invalid ACCESS_TOKEN",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "keyword": {
+                        "type": "string"
+                      },
+                      "ACCESS_TOKEN": {
+                        "type": "string"
+                      },
+                      "status": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            },
                 "400": {
                   "description": "Failed. Misunderstood Request."
                 },
